test/fail/bad-import-decs.mo
//MOC-FLAG -A=M0194
import C "lib/decs"; // bad actor import

actor {
};
